# mdbook-fiction-tools

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
mdbook-add-copyright/: Cargo.toml
mdbook-add-copyright/src/: lib.rs  main.rs
mdbook-epub-fancy/: Cargo.toml
src/: add_copyright.rs  bookir.rs  config.rs  epub.rs  helpers.rs  lib.rs  pdf.rs  xhtml.rs
src/bookir/: math.rs  nav.rs  str.rs  xml.rs
src/epub/: config.rs  info.rs  nav.rs  package.rs  style.rs  xhtml.rs
src/helpers/: known-extensions
src/pdf/: config.rs  data.rs  file.rs
src/pdf/data/: dictionary.rs
src/pdf/fonts/: mod.rs
tests/: run-mdbook-tests.rs
tests/common/inline-html/src/: chapter_1.md
tests/mdbook-add-copyright/footnotes/: book.toml
tests/mdbook-add-copyright/footnotes/src/: chapter_1.md
tests/mdbook-bookir/basic-test/: book.toml
tests/mdbook-bookir/basic-test/src/: chapter_1.md  chapter_2.md
tests/mdbook-bookir/part-titles/: book.toml
tests/mdbook-bookir/part-titles/src/: SUMMARY.md
tests/mdbook-epub-fancy/explicit-ids/: book.toml
tests/mdbook-epub-fancy/explicit-ids/src/: SUMMARY.md
tests/mdbook-epub-fancy/inline-html/: book.toml
