[package]
name = "mdbook-fiction-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = { version = "0.4.43", default-features = false }
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.2.0"
serde_json = "1.0"
toml = "0.8.10"
serde = "1.0.197"
serde_derive = "1.0.197"
semver = "1.0.22"
xml-rs = "0.8"
zip = "0.6.6"
time = { version = "0.3.34", features = ["formatting"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
with_builtin_macros = "0.0.3"
ring = { version = "0.17.8", optional = true }
indexmap = { version = "2.7.0", optional = true }

[features]
epub = []
epub-signatures = ["epub", "dep:ring"]
pdf = ["dep:indexmap"]

[[bin]]
name = "mdbook-epub-fancy"
required-features = ["epub"]
