[package]
name = "mdbook-add-copyright"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
serde_derive.workspace = true
semver.workspace = true